--- a/papers/icaps2011/icaps2011.tex
+++ b/papers/icaps2011/icaps2011.tex
@@ -17,7 +17,7 @@
 
 
 \pdfinfo{
-/Title(Instance-Based Parameter Tuning for Evolutionary AI Planning)
+/Title(Instance-Based Parameter Tuning and Learning for Evolutionary AI Planning)
 /Subject (Proceedings of the )
 /Author (AAAI)
 }
