--- a/papers/icaps2011/icaps2011_cameraready.tex
+++ b/papers/icaps2011/icaps2011_cameraready.tex
@@ -22,8 +22,7 @@
 /Author (AAAI)
 }
 
-\title{Instance-Based Parameter Tuning\\
-for Evolutionary AI Planning }
+\title{Instance-Based Parameter Tuning and Learning for Evolutionary AI Planning }
 
 \author{M{\'a}ty{\'a}s Brendel 
 \and Marc Schoenauer \\ 
