--- a/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
+++ b/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
@@ -26,7 +26,7 @@ for Evolutionary AI Planning}
 
 \numberofauthors{1}
 
-\author{This work is submitted to the {\large \em Self-* Search} track of GECCO'2011}
+\author{This work is accepted as poster to the {\large \em Self-* Search} track of GECCO'2011}
 
 % \numberofauthors{2}
 % 
@@ -217,8 +217,8 @@ In the Planning and Learning Part of IPC2011 (IPC), 5 sample domains were pre-pu
 Name & \ Default & \ CMA-ES &  Transferer & ANN \\ 
 \hline
 Freecell & ~0 -- ~9& 64 -- 66  & 18 -- ~8  & 18 -- 17     \\
-Grid & ~2 -- 24 & 66 -- ~60  & 16 -- 11 & 17 -- ~5  &    \\
-Mprime &  ~2 -- 45& 59 -- 36 & ~2 -- 11  & 18 -- ~8  &    \\
+Grid & ~2 -- 24 & 66 -- 60  & 16 -- 11 & 17 -- ~5  &    \\
+Mprime &  ~2 -- 45& 59 -- 36 & 21 -- 11  & 18 -- ~8  &    \\
 \hline
 \end{tabular}
 \caption{For each method (default, CMA-ES, Genetransferer or ANN), the percentage of instances on which this method gave the best parameter set. Each cell shows 2 figures: the first one considers all occurences of a method, no matter if another method also lead an equivalent parameter set, as good as the first one. The second figures only considers the first method (from left to right) that discovered the best parameter-set.}
