--- a/papers/D3.1/D3_1.tex
+++ b/papers/D3.1/D3_1.tex
@@ -36,6 +36,9 @@
 \newcommand{\FLOORTILE}{{\sc Floortile}}
 \newcommand{\PARCPRINTER}{{\sc ParcPrinter}}
 
+\def\MULTIZENO{{\sc MultiZenoTravel}}
+\def\MONOZENO{{\sc ZenoTravel}}
+
 
 \def\UU{{\mathbb{U}}}
 
@@ -115,11 +118,104 @@ Secondly, the huge reservoir of domains that have been carefully tuned over the 
 XXX
 
 \chapter{Zeno-based 'toy' problems}
-
+\section{The (single-objective) zeno domain}
 This Section describes the simple problems derived from the {\tt zeno} single-objective domain, probably the most well-know domain of AI planning after the STRIP block world, that has been present in all IPC competitions since the beginning. 
 
 The {\tt zeno} domain involves persons, cities and planes. States describe in which city each person and each plane is located (predicate {\tt at} with two arguments, a city and a person or a plane), and the fuel-level of each plane. Actions allow persons to bord/unboard a plane, planes to travel from one city to another (with whoever is on-board), either fast (and consuming a lot of fuel) or slowly (with low fuel consumption), and planes to refuel. All actions have a duration. See Annex \ref{XXX} for the domain file.
 
+We will use here a simplified {\tt zeno} domain, where there is no fuel level, no boarding/unboarding actions. This simple domain (for single objective optimization) is written in PPDL as follows. There are only 2 actions, {\tt fly} and {\tt flyVide} that move the planes with or without a passenger, and the preconditions and effects of the actions are rather straightforward.
+
+\begin{verbatim}
+(:action fly
+ :parameters (?a ?c1 ?c2 ?x)
+ :duration (= ?duration (timeTravel ?c1 ?c2))
+ :precondition
+	(and (aircraft ?a) (city ?c1) (city ?c2)    
+             (at ?a ?c1) (person ?x) (at ?x ?c1) 
+        )
+ :effect
+	(and (at ?a ?c2) (not (at ?a ?c1)) 
+             (not (at ?x ?c1)) (at ?x ?c2)
+        )
+)
+
+(:action flyVide
+ :parameters (?a ?c1 ?c2)
+ :duration (= ?duration (timeTravel ?c1 ?c2))
+ :precondition
+	(and (aircraft ?a) (city ?c1) (city ?c2) (at ?a ?c1) 
+        )
+ :effect
+	(and (at ?a ?c2) (not (at ?a ?c1))
+        )
+)
+\end{verbatim}
+
+
+A given instance must instantiate all variables. The simplest non-trivial instance is symbolically represented on Figure \ref{fig:monoZeno}: it has 3 cities, and 3 persons must be transported from city0 to city2 using 2 planes that are in city0 in the initial state as well. Flights only exist from city0 to city1 and city1 to city2, and have the same duration of 2, not depending on whether the plane is full or empty. The advised reader will rapidly find the non-trivial solution with a total makespan of \ldots 8!
+
+
+\begin{figure}[tb!]
+  \begin{center}
+ \includegraphics[width=0.5\textwidth]{miniMono.eps}
+ % instance.eps: 0x0 pixel, 300dpi, 0.00x0.00 cm, bb=0 0 509 388
+\caption{A schematic view of the simple \MONOZENO\ instance used as a basis for the MultiZeno design: the domain is a simplified version of the standard {\tt zeno} domain regarding transportation problems: There are only 3 cities, and 2 possible flights whose durations are attached to the corresponding edges.}
+\label{fig:monoZeno}
+\end{center}
+\end{figure}
+
+This problem corresponds to the PDDL file containing as initial and final goal the following lines, that are self-explaining.
+\begin{verbatim}
+(:init
+        (= (timeTravel city0 city1) 2)	
+        (= (timeTravel city1 city0) 2)
+
+        (= (timeTravel city1 city2) 2)
+        (= (timeTravel city2 city1) 2)
+
+	(at plane1 city0)
+	(at plane2 city0)
+	(at person1 city0)
+	(at person2 city0)
+	(at person3 city0)
+)
+(:goal (and
+	(at person1 city2)
+	(at person2 city2)
+	(at person3 city2)
+	)
+)
+\end{verbatim}
+Note that the initial goal contains the definitions of the duration (through ''function`` {\tt timeTravel}), as well as the localization of {\bf all} objects (2 planes and 3 persons) while the goal state only contains a partial description of a state (all persons in city2). The instance PDDL file also contains the definitions and types of all objects, referring to the domain PDDL file (see in Appendix at end of this deliverable).
+
+
+\section{The multi-objective zeno domain}
+
+\begin{figure}[tb!]
+  \begin{center}
+ \includegraphics[width=0.5\textwidth]{miniMulti.eps}
+ % instance.eps: 0x0 pixel, 300dpi, 0.00x0.00 cm, bb=0 0 509 388
+\caption{A schematic view of a \MULTIZENO\ instance, the proposed simple benchmark transportation problem: Durations of available flights are attached to the corresponding edges, costs/risks are attached to landing in the central cities (in gray circles).}
+\label{fig:multiZeno}
+\end{center}
+\end{figure}
+
+
+This section will detail the simple domain for multi-objective temporal planning that is described in Figure \ref{fig.instance}. The reader will have by now solved the little puzzle set in previous Section, and found the solution with makespan 8 (flying 2 passengers to {\tt city1}, one plane continues with its passenger to {\tt city2} while the other plane flies back empty to {\tt city0}, the plane in {\tt city2} returns empty to {\tt city1} while the other plane brings the last passenger there, and the goal is reached after both planes bring the two remaining passengers to {\tt city2}). 
+
+In order to turn this problem into a not-too-unrealistic multi-objective problem, there are now 3 possible intermediate cities, with different travel time to the two outer cities (0 and 4 in the example of Figure \ref{fig:multiZeno}), and another objective is added, that is increased when landing on any of the 3 central cities (cities 1 to 3 in the same example). In order to make the objective contradictory, this second objective varies inversely to the first one, being large for city1 that is fast to reach, and small for city3 to where travel takes more time. There are however (at least) two ways to take this objective into account during a complete plan, that lead to two types of problems: In the \MULTIZENO$_{Cost}$, the second objective is similar to a cost, i.e. is increased additively: each plane has to pay the corresponding tax every time it lands one of the taxed cities; In the \MULTIZENO$_{Risk}$, the second objective is similar to a risk, and the maximal value encountered during the complete execution of a plan is to be minimized. 
+
+In both cases however, there are 3 obvious points that belong to the Pareto Front: the solution with minimal makespan described in the single-objective case, going from city0 to city4 through city1, and the similar solutions that use respectively {\tt city2} and {\tt city3} in lieu of {\tt city1}. The values of the makespans are respectively 8, 16 and 24, and the values of the costs are, for each solution, 4 times the value of the single landing tax, and exactly the highest value in case of risk. For the risk case, there is no other point on the Pareto Front, as a single landing on a high-risk city sets the risk of the whole plan to a high risk. For the cost model however, there are other points on the Pareto Front, as different cities can be used for the different passengers. For instance, in the case of Figure \ref{fig:multiZeno}, this leads to a Pareto Front made of 5 points, (8,12), (16,8), and (24,4) (going only through {\tt city 1}, {\tt 2} and {\tt 3} respectively), plus (12,10) and (20,6).
+
+The corresponding two Pareto fronts for the instance of Figure \ref{fig:multiZeno} are represented on Figure \ref{fig:zeno3Fronts}.
+
+\section{A sequence of multi-objective zeno-based instances}
+
+There are several ways to make this first simple instance more or less complex. A first possibility is to modify the relative values of the taxes/risks on the central cities: for instance, the two sets of values that have been experimented with in the first experiments with this benchmark are the (3-2-1) case depicted on Figure \ref{fig:multiZeno}, and the (100-10-1) case, somehow representing another extreme of the spectrum of possible values.
+
+A second way is to add passengers. Sticking to bunches of 3 passengers in order to be able to easily derive some obvious Pareto-optimal solutions, it is easy to derive all the solutions for 6 and 9 passengers (see the corresponding Pareto fronts on Figure \ref{fig:zeno6} and \ref{fig:zeno9}).
+
+Finally, the number of central cities can also be increased
 
 
 \chapter{Multi-Objectivization of IPC domains}
@@ -288,4 +384,4 @@ For the satisficing track, in the IPC 2008 the first problem had 1 sheet, second
 
 \end{document}
 
-/trunk/experiments/MultiObjective/Examples/IPC7/
+
